Finalize index, kick start about page

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Clinton Mbonu</title>
+    <title>Clinton Mbonu - About</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="assets/css/portfolio.css" />
@@ -23,21 +23,20 @@
         <li><a href="mycv.html">CV</a></li>
       </ul>
     </nav>
-    <section class="welcome-container">
-      <div class="welcomeimg">
-        <img
-          src="/assets/images/profile_image.jpeg"
-          alt="Welcome profile images"
-          class="imgtag"
-        />
-      </div>
-      <div class="welcomemessage">
-        <h3>Hi, I'm Clinton Mbonu</h3>
-        <p>
-          A software developer from Nigeria, currently enrolled at MEST and a
-          EIT (Entrepreneur in training)
-        </p>
-      </div>
+    <section class="about-container">
+        <ul>
+            <li>
+                <h6>About my story</h6>
+                <p>
+                    <h4>Clinton as a software dev.</h4>
+                </p>
+                <p>
+                    I am a software developer from Nigeria, currently enrolled at MEST and a EIT (Entrepreneur in training). I am a self-taught developer, I started learning how to code in 2012 and I have been coding ever since. I have been able to build a few projects and I am currently working on a few more. I am also a member of the MEST community and I am currently working on a few projects with my fellow EITs.
+                </p>
+            </li>
+            <li>lsngklfnglkdngldkgndflk</li>
+            <li>lkdsfgkldsglkdsgkldj</li>
+        </ul>
     </section>
     <footer class="footer-container">
         &copy; 2022 Clinton Mbonu - MEST EIT 2023 Cohort 
