about page structure, setup

--- a/about.html
+++ b/about.html
@@ -34,8 +34,21 @@
                     I am a software developer from Nigeria, currently enrolled at MEST and a EIT (Entrepreneur in training). I am a self-taught developer, I started learning how to code in 2012 and I have been coding ever since. I have been able to build a few projects and I am currently working on a few more. I am also a member of the MEST community and I am currently working on a few projects with my fellow EITs.
                 </p>
             </li>
-            <li>lsngklfnglkdngldkgndflk</li>
-            <li>lkdsfgkldsglkdsgkldj</li>
+            <li> <img
+                src="/assets/images/aboutimage.png"
+                alt="Welcome profile images"
+                class="imgtag"
+              /></li>
+            <li>
+                <h3>Skillset</h3>
+                    <ol>
+                        <li>Web Development</li>
+                        <li>Mobile Development</li>
+                        <li>UI/UX Design</li>
+                        <li>Product Management</li>
+                        <li>Business Consultancy</li>
+                    </ol>
+            </li>
         </ul>
     </section>
     <footer class="footer-container">
