--- a/skills.html
+++ b/skills.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="">
     </head>
     <body>
+        <h1> My skills</h1>
         <script src="" async defer></script>
     </body>
 </html>
