Add few tags to remaining pages

--- a/skills.html
+++ b/skills.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="">
     </head>
     <body>
-        <h1> My skills</h1>
+        <h2>Info coming soon </h2>
         <script src="" async defer></script>
     </body>
 </html>
