Removed css from files

--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
           src="/assets/images/profile_image.jpeg"
           alt="Welcome profile images"
           class="imgtag"
+          width="450px"
+          height="500px"
         />
       </div>
       <div class="welcomemessage">
