Setup and styled navigation side bar

--- a/index.html
+++ b/index.html
@@ -7,49 +7,62 @@
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="assets/css/portfolio.css" />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
   </head>
   <body>
-    <nav class="navbar">
-      <div class="nav-brand">
-        <a href="index.html">Clinton Mbonu</a>
+    <div class="container">
+      <div class="navigation">
+        <div class="nav-header">
+          <div class="nav-title">
+            <img src="assets/images/portrait.jpg" alt="Portrait image" class="nav-image"/>
+            <h2>Clinton Mbonu</h2>
+            <p>WEB DEVELOPER</p>
+          </div>
+        </div>
+        <div class="nav-menu">
+          <ul class="nav-links">
+            <li>
+              <a href="index.html"
+                ><i class="fa fa-home icon"></i> <span>Home</span></a>
+            </li>
+            <li>
+              <a href="about.html"
+                ><i class="fa fa-user icon"></i> <span>About</span></a>
+            </li>
+            <li>
+              <a href="portfolio.html">
+                <i class="fa fa-lightbulb-o icon"></i><span>Services</span></a>
+            </li>
+            <li>
+              <a href="contact.html">
+                <i class="fa fa-pencil icon" aria-hidden="true"></i>
+                <span>Resume</span></a>
+            </li>
+            <li>
+              <a href="contact.html"
+                ><i class="fa fa-building-o icon"></i><span>Works</span></a>
+            </li>
+            <li>
+              <a href="contact.html"
+                ><i class="fa fa-phone icon"></i><span>Contact</span></a>
+            </li>
+          </ul>
+          <div>
+            <ul class="social">
+              <li><i class="fa fa-facebook-square" aria-hidden="true"></i></li>
+              <li><i class="fa fa-instagram" aria-hidden="true"></i></li>
+              <li><i class="fa fa-twitter" aria-hidden="true"></i></li>
+              <li><i class="fa fa-linkedin-square" aria-hidden="true"></i></li>
+              <li><i class="fa fa-angellist" aria-hidden="true"></i></li>
+            </ul>
+            <div>&copy; 2022 Portfolio Website</div>
+          </div>
+        </div>
       </div>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="skills.html">Skills</a></li>
-        <li><a href="portfolio.html">Portfolio</a></li>
-        <li><a href="contact.html">Contact</a></li>
-        <li><a href="mycv.html">CV</a></li>
-      </ul>
-    </nav>
-    <section class="welcome-container">
-      <div class="welcomeimg">
-        <img
-          src="/assets/images/profile_image.jpeg"
-          alt="Welcome profile images"
-          class="imgtag"
-          width="450px"
-          height="500px"
-        />
-      </div>
-      <div class="welcomemessage">
-        <h3>Hi, I'm Clinton Mbonu</h3>
-        <p>
-          A software developer from Nigeria, currently enrolled at MEST and a
-          EIT (Entrepreneur in training)
-        </p>
-      </div>
-    </section>
-    <footer class="footer-container">
-        &copy; 2022 Clinton Mbonu - MEST EIT 2023 Cohort 
-        <ul class="social-icons">
-            <li><i class="fa fa-twitter"></i></li>
-            <li><i class="fa fa-linkedin"></i></li>
-            <li><i class="fa fa-github"></i></li>
-            <li><i class="fa fa-angellist"></i></li>
-        </ul>
-    </footer>
-    <script src="" async defer></script>
+      <div class="content"></div>
+    </div>
   </body>
 </html>
