Finalize welcome card and kick off the about us card

--- a/index.html
+++ b/index.html
@@ -14,10 +14,14 @@
   </head>
   <body>
     <div class="container">
-      <div class="navigation">
+      <section class="navigation shadow">
         <div class="nav-header">
           <div class="nav-title">
-            <img src="assets/images/portrait.jpg" alt="Portrait image" class="nav-image"/>
+            <img
+              src="assets/images/portrait.jpg"
+              alt="Portrait image"
+              class="nav-image"
+            />
             <h2>Clinton Mbonu</h2>
             <p>WEB DEVELOPER</p>
           </div>
@@ -26,43 +30,93 @@
           <ul class="nav-links">
             <li>
               <a href="index.html"
-                ><i class="fa fa-home icon"></i> <span>Home</span></a>
+                ><i class="fa fa-home icon"></i> <span>Home</span></a
+              >
             </li>
             <li>
               <a href="about.html"
-                ><i class="fa fa-user icon"></i> <span>About</span></a>
+                ><i class="fa fa-user icon"></i> <span>About</span></a
+              >
             </li>
             <li>
               <a href="portfolio.html">
-                <i class="fa fa-lightbulb-o icon"></i><span>Services</span></a>
+                <i class="fa fa-lightbulb-o icon"></i><span>Services</span></a
+              >
             </li>
             <li>
               <a href="contact.html">
                 <i class="fa fa-pencil icon" aria-hidden="true"></i>
-                <span>Resume</span></a>
+                <span>Resume</span></a
+              >
             </li>
             <li>
               <a href="contact.html"
-                ><i class="fa fa-building-o icon"></i><span>Works</span></a>
+                ><i class="fa fa-building-o icon"></i><span>Works</span></a
+              >
             </li>
             <li>
               <a href="contact.html"
-                ><i class="fa fa-phone icon"></i><span>Contact</span></a>
+                ><i class="fa fa-phone icon"></i><span>Contact</span></a
+              >
             </li>
           </ul>
           <div>
             <ul class="social">
-              <li><i class="fa fa-facebook-square" aria-hidden="true"></i></li>
+              <li>
+                <i class="fa fa-facebook-square" aria-hidden="true"></i>
+              </li>
               <li><i class="fa fa-instagram" aria-hidden="true"></i></li>
               <li><i class="fa fa-twitter" aria-hidden="true"></i></li>
-              <li><i class="fa fa-linkedin-square" aria-hidden="true"></i></li>
+              <li>
+                <i class="fa fa-linkedin-square" aria-hidden="true"></i>
+              </li>
               <li><i class="fa fa-angellist" aria-hidden="true"></i></li>
             </ul>
             <div>&copy; 2022 Portfolio Website</div>
           </div>
         </div>
-      </div>
-      <div class="content"></div>
+      </section>
+      <section class="content">
+        <div class="welcome-wrapper">
+          <div class="welcome card shadow">
+            <h1>I'm Clinton Mbonu</h1>
+            <p>
+              Software Engineer | Web Developer | Entrepreneur | Co-Founder 
+            </p>
+            <div class="cta">
+              <a href="portfolio.html" class="btn"
+                ><i class="fa fa-lightbulb-o icon"></i>View Portfolio</a
+              >
+              <a href="contact.html" class="btn-accent"
+                ><i class="fa fa-inbox icon" aria-hidden="true"></i>Download
+                Resume</a
+              >
+            </div>
+          </div>
+        </div>
+        <div class="card shadow about-card">
+          <h2>About Me</h2>
+          <div class="underscore"></div>
+          <div class="info">
+            <div class="imgside">
+              <img
+                src="assets/images/portraitabout.jpeg"
+                alt="Portrait image"
+                class="about-image"
+              />
+            </div>
+            <div class="details">
+              <h2>Hello,</h2>
+              <p>
+                I'm a software developer! I can help you build products, a
+                feature, website or mobile app. Look through some of my work and
+                experience! If you like what you see and have a project you need
+                to be worked on, don't hesitate to contact me.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
     </div>
   </body>
 </html>
