Finalize services section

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
               class="nav-image"
             />
             <h2>Clinton Mbonu</h2>
-            <p>WEB DEVELOPER</p>
+            <p>Software Developer</p>
           </div>
         </div>
         <div class="nav-menu">
@@ -41,12 +41,6 @@
             <li>
               <a href="portfolio.html">
                 <i class="fa fa-lightbulb-o icon"></i><span>Services</span></a
-              >
-            </li>
-            <li>
-              <a href="contact.html">
-                <i class="fa fa-pencil icon" aria-hidden="true"></i>
-                <span>Resume</span></a
               >
             </li>
             <li>
@@ -78,11 +72,9 @@
       </section>
       <section class="content">
         <div class="welcome-wrapper">
-          <div class="welcome card shadow">
+          <div class="welcome cardx shadow">
             <h1>I'm Clinton Mbonu</h1>
-            <p>
-              Software Engineer | Web Developer | Entrepreneur | Co-Founder 
-            </p>
+            <p>Software Engineer | Web Developer | Entrepreneur | Co-Founder</p>
             <div class="cta">
               <a href="portfolio.html" class="btn"
                 ><i class="fa fa-lightbulb-o icon"></i>View Portfolio</a
@@ -94,7 +86,7 @@
             </div>
           </div>
         </div>
-        <div class="card shadow about-card">
+        <div class="card shadow dashoff">
           <h2>About Me</h2>
           <div class="underscore"></div>
           <div class="info">
@@ -113,7 +105,175 @@
                 experience! If you like what you see and have a project you need
                 to be worked on, don't hesitate to contact me.
               </p>
+
+              <div class="further-details">
+                <div><span>Name: </span> Clinton Mbonu</div>
+                <div><span>Location:</span>Accra, Ghana</div>
+                <div><span>Email:</span>clintonmbonu@meltwater.com</div>
+                <div><span>Hobbies:</span>Music, Coding</div>
+              </div>
             </div>
+          </div>
+        </div>
+        <div class="card shadow dashoff">
+          <h2>My skills</h2>
+          <div class="underscore"></div>
+          <p>
+            I have a wide range of skills in the tech industry. I have worked on
+            projects in the following areas:
+          </p>
+          <div class="further-details">
+            <div class="skill">
+              <div class="skill-icon">
+                <i class="fa fa-code" aria-hidden="true"></i>
+              </div>
+              <div class="skill-name">Angular</div>
+            </div>
+            <div class="skill">
+              <div class="skill-icon">
+                <i class="fa fa-mobile" aria-hidden="true"></i>
+              </div>
+              <div class="skill-name">React.js</div>
+            </div>
+            <div class="skill">
+              <div class="skill-icon">
+                <i class="fa fa-database" aria-hidden="true"></i>
+              </div>
+              <div class="skill-name">HTML/CSS</div>
+            </div>
+            <div class="skill">
+              <div class="skill-icon">
+                <i class="fa fa-paint-brush" aria-hidden="true"></i>
+              </div>
+              <div class="skill-name">SQL</div>
+            </div>
+            <div class="skill">
+              <div class="skill-icon">
+                <i class="fa fa-cogs" aria-hidden="true"></i>
+              </div>
+              <div class="skill-name">JEST</div>
+            </div>
+            <div class="skill">
+              <div class="skill-icon">
+                <i class="fa fa-cloud" aria-hidden="true"></i>
+              </div>
+              <div class="skill-name">MySQL</div>
+            </div>
+            <div class="skill">
+              <div class="skill-icon">
+                <i class="fa fa-handshake-o" aria-hidden="true"></i>
+              </div>
+              <div class="skill-name">Postgres</div>
+            </div>
+            <div class="skill">
+              <div class="skill-icon">
+                <i class="fa fa-mobile" aria-hidden="true"></i>
+              </div>
+              <div class="skill-name">Flutter</div>
+            </div>
+          </div>
+        </div>
+        <div class="card shadow dashoff">
+          <h2>My Services</h2>
+          <div class="underscore"></div>
+          <ul class="service-box">
+            <li>
+              <div class="service-icon">
+                <i class="fa fa-code" aria-hidden="true"></i>
+              </div>
+              <div class="service-name">
+                Web Development <br />
+                <span class="service-description"
+                  >Developing a website internet or intranet</span
+                >
+              </div>
+            </li>
+            <li>
+              <div class="service-icon">
+                <i class="fa fa-mobile" aria-hidden="true"></i>
+              </div>
+              <div class="service-name">
+                Mobile App Development <br />
+                <span class="service-description"
+                  >Build user friendly mobile application to help automate your
+                  business</span
+                >
+              </div>
+            </li>
+            <li>
+              <div class="service-icon">
+                <i class="fa fa-database" aria-hidden="true"></i>
+              </div>
+              <div class="service-name">
+                Database Management
+                <span class="service-description"
+                  >Manage data in a robust database system, for easy access and
+                  scalability</span
+                >
+              </div>
+            </li>
+            <li>
+              <div class="service-icon">
+                <i class="fa fa-cloud" aria-hidden="true"></i>
+              </div>
+              <div class="service-name">Cloud Computing <br />
+                <span class="service-description">Embrace most recent technologies for data storage</span>
+              </div>
+            </li>
+            <li>
+              <div class="service-icon">
+                <i class="fa fa-handshake-o" aria-hidden="true"></i>
+              </div>
+              <div class="service-name">Consultancy <br />
+                <span class="service-description">Offer advice on how to automate their processes and embrace ICT</span>
+              </div>
+            </li>
+            <li>
+              <div class="service-icon">
+                <i class="fa fa-briefcase" aria-hidden="true"></i>
+              </div>
+              <div class="service-name">Project Management <br />
+                <span class="service-description">We help manage your project for better approach</span>
+              </div>
+            </li>
+          </ul>
+        </div>
+        <div class="card shadow dashoff">
+          <h2>Get in touch</h2>
+          <div class="underscore"></div>
+          <div class="form-container">
+            <div class="contact-details">
+              <div class="contact">
+                <div class="contact-icon">
+                  <i class="fa fa-map-marker" aria-hidden="true"></i>
+                </div>
+                <div class="contact-name">Location</div>
+                <div class="contact-description">Accra, Ghana</div>
+              </div>
+              <div class="contact">
+                <div class="contact-icon">
+                  <i class="fa fa-envelope" aria-hidden="true"></i>
+                </div>
+                <div class="contact-name">Email</div>
+                <div class="contact-description">
+            </div>
+            <form action="">
+              <div class="form-group">
+                <label for="name">Name</label>
+                <input type="text" name="name" id="name" />
+              </div>
+              <div class="form-group">
+                <label for="email">Email</label>
+                <input type="email" name="email" id="email" />
+              </div>
+              <div class="form-group">
+                <label for="message">Message</label>
+                <textarea name="message" id="message" cols="30" rows="10"></textarea>
+              </div>
+              <div class="form-group">
+                <button type="submit">Send</button>
+              </div>
+            </form>
           </div>
         </div>
       </section>
