--- a/index.html
+++ b/index.html
@@ -255,23 +255,27 @@
                   <i class="fa fa-envelope" aria-hidden="true"></i>
                 </div>
                 <div class="contact-name">Email</div>
-                <div class="contact-description">
+              </div>
             </div>
             <form action="">
               <div class="form-group">
-                <label for="name">Name</label>
-                <input type="text" name="name" id="name" />
+                <i class="fa fa-user" aria-hidden="true"></i>
+                <input type="text" name="name" id="name" placeholder="Your name" maxlength="200"/>
               </div>
               <div class="form-group">
-                <label for="email">Email</label>
-                <input type="email" name="email" id="email" />
+                <i class="fa fa-at" aria-hidden="true"></i>
+                <input type="email" name="email" id="email" placeholder="Email Address" />
               </div>
               <div class="form-group">
-                <label for="message">Message</label>
-                <textarea name="message" id="message" cols="30" rows="10"></textarea>
+                <i class="fa fa-header" aria-hidden="true"></i>
+                <input type="text" name="name" id="name" placeholder="Subject" maxlength="200"/>
               </div>
               <div class="form-group">
-                <button type="submit">Send</button>
+                <i class="fa fa-commenting-o" aria-hidden="true"></i>
+                <textarea name="message" id="message" cols="30" rows="10" placeholder="Message"></textarea>
+              </div>
+              <div class="form-group">
+                <button type="submit" class="btn-accent">Send</button>
               </div>
             </form>
           </div>
