Add javascript events to list elements

--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="assets/css/portfolio.css" />
-    <link rel="stylesheet" href="assets/css/mobile.css" media="screen and (max-width: 992px)"/>
+    <link
+      rel="stylesheet"
+      href="assets/css/mobile.css"
+      media="screen and (max-width: 992px)"
+    />
     <link
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
@@ -16,8 +20,8 @@
   </head>
   <body>
     <div class="container">
-      <header class="navigation shadow">
-        <a href="#" class="closeMenu" onclick="closeMobileMenu()"> 
+      <header class="navigation shadow" id="navigation">
+        <a href="#" class="closeMenu" onclick="closeMobileMenu()">
           <i class="fa fa-times" aria-hidden="true"></i>
         </a>
         <div class="nav-header">
@@ -83,9 +87,12 @@
               <div class="toogle-btn"></div>
               <div class="toogle-btn"></div>
               <div class="toogle-btn"></div>
-          </div>
-            <h1>I'm Clinton Mbonu</h1>
-            <p>Software Engineer | EIT @ MEST</p>
+            </div>
+            <div class="welcomemsg">
+              <h1>I'm Clinton Mbonu</h1>
+              <p>Software Engineer | EIT @ MEST</p>
+            </div>
+
             <div class="cta">
               <a href="portfolio.html" class="btn"
                 ><i class="fa fa-lightbulb-o icon"></i>View Portfolio</a
