Add formspree to contact form

--- a/index.html
+++ b/index.html
@@ -93,11 +93,11 @@
               <p>Software Engineer | EIT @ MEST</p>
             </div>
 
-            <div class="cta">
-              <a href="portfolio.html" class="btn"
-                ><i class="fa fa-lightbulb-o icon"></i>View Portfolio</a
+            <div class="cta"> 
+              <a href="https://github.com/clintonjosephs" class="btn" target="_blank"
+                ><i class="fa fa-github" aria-hidden="true"></i> Check GitHub</a
               >
-              <a href="contact.html" class="btn-accent"
+              <a href="./assets/docs/resume.pdf" class="btn-accent" target="_blank"
                 ><i class="fa fa-inbox icon" aria-hidden="true"></i>Download
                 Resume</a
               >
@@ -301,7 +301,7 @@
                 </div>
               </div>
             </div>
-            <form action="">
+            <form action="https://formspree.io/f/mrgjzyey">
               <div class="form-group">
                 <i class="fa fa-user" aria-hidden="true"></i>
                 <input
@@ -310,6 +310,7 @@
                   id="name"
                   placeholder="Your name"
                   maxlength="200"
+                  required
                 />
               </div>
               <div class="form-group">
@@ -319,6 +320,7 @@
                   name="email"
                   id="email"
                   placeholder="Email Address"
+                  required
                 />
               </div>
               <div class="form-group">
@@ -329,6 +331,7 @@
                   id="name"
                   placeholder="Subject"
                   maxlength="200"
+                  required
                 />
               </div>
               <div class="form-group">
@@ -339,6 +342,7 @@
                   cols="30"
                   rows="10"
                   placeholder="Message"
+                  required
                 ></textarea>
               </div>
               <div class="form-group">
